# socket

./: .travis.yml  CMakeLists.txt
inc/: Client.h  clientSocket.h  mysocket.h
src/: clientSocket.c  mysocket_avr.c  mysocket_msp.c  mysocket_x86.c
